# BatchPlan

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  environment.yml  extract_floor_plans.py  filters.py  formatters.py  global_bboxes.csv  helper.ipynb  helper.py  map_to_totem.ipynb  mark_floors.py  pyproject.toml  setup.py  stylings.py  test_fixes.py  totem_mapping_standard_materials.csv  utils.py
.github/workflows/: build_wheels.yml  python.yml
TotemDatabase/: AirTightnesses.json  BuildingFunctions.json  BuildingTypologies.json  CompositionMaterials.json  ElementCategories.json  ElementTypeFilterTypes.json  ElementTypeFilters.json  ElementTypes.json  EnergyCategories.json  EnergySources.json  EnvironmentTypes.json  HeatingTypes.json  LifeCyclePhases.json  MaterialCategories.json  ModelParameters.json  ReversibilityIndicators.json  TechnicalInstallationCategories.json  TypeOfAssemblies.json  VentilationTypes.json  WasteScenarios.json
batchplan/: extract_floor_plans.py  fixes.py  mark_floors.py  stylings.py  utils.py
examples/data/Shependomlaan/: IFC Schependomlaan.csv
src/: Fixes.hxx  Fixes.i
src/batchplan/: extract_floor_plans.py  filters.py  formatters.py  helper.py  mark_floors.py
swig/: Fixes.cxx  OCCHandle.i
tests/: test_fixes.py
